# nine-rings

./: .README.md.un~  .env.example  .gitignore  BUILDING.md  LICENSE  README.md  build.sh  import-2026-07-09.json  import-2026-07-11.json  index.html  package-lock.json  package.json  serve.py  test-converter.js  test-converter2.js  test-dataflow.py  test-delta.py  vite.config.ts
docs/: .markdown-import.md.un~  FLUTTER_BUILD.md  ROADMAP.md  TAURI_BUILD.md  TAURI_DESIGN.md  code-block-ux.md  cross-platform-consistency.md  document-system-design.md  features-roadmap.md  features.md  github-sync.md  lessons-learned.md  macos-platform-analysis.md  markdown-import.md  md-import.md  phase1-architecture.md  sync-architecture.md  windows-webview-troubleshooting.md
flutter_app/: README.md  pubspec.yaml
plugins/: vite-import-plugin.ts
public/: manifest.json  sw.js
schema/: config.yaml  note.yaml
scripts/: disable-auth.py  gen-schema.py  md-to-nine-rings.py  vercel-api.py
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns  icon.png.bak
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: config.rs  doc_tree.rs  export.rs  mod.rs  note.rs  query.rs  quick_capture.rs  sync.rs  template.rs
src-tauri/src/db/: migrations.rs  mod.rs  models.rs  query.rs  schema_gen.rs
src-tauri/src/export/: mod.rs
src-tauri/src/service/: mod.rs  note_service.rs  search_service.rs  sync_service.rs
src-tauri/tests/: integration.rs  phase3_driver.rs
tests/: core.test.ts  delta-converter.test.ts  (+4 more)
(+107 files in other folders)
